Refactor doccomments